<resources>
    <string name="app_name">MyTest</string>
    <string name="home">explore</string>
    <string name="Form">form</string>
    <string name="Profile">profile</string>

    <!--  Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Alerts">Alerts</string>
    <string name="Home">Home</string>
    <string name="fragment">fragment Home</string>
    <string name="search">search</string>
    <string name="alerts">alerts</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="write_movie_title">Escribe el título</string>
    <string name="buscar">Buscar</string>
    <string name="movie_image">Movie Image</string>
    <string name="movie_titles">Título: Matrix</string>
    <string name="movie_director">Directores: Hermanas Wachowski</string>
    <string name="movie_actors">Actores: Keanu Reeves, Laurence Fishburne, Carrie-Anne Moss, Hugo Wearing</string>
    <string name="movie_year">Año: 1999</string>
    <string name="Movie">Movie</string>
    <string name="matrix">Matrix</string>
    <string name="pelicula_matrix">Pelicula: Matrix</string>
    <string name="localiza_aqui_la_peli_que_buscas">Localiza aqui la peli que buscas:</string>
    <string name="accede_al_foro">Accede al Foro</string>
    <string name="registro_de_nueva_pel_cula">Registro de nueva película</string>
    <string name="titulo">Titulo:</string>
    <string name="director">Director:</string>
    <string name="actor1">Actor1:</string>
    <string name="actor2">Actor2:</string>
    <string name="actor3">Actor3:</string>
    <string name="actor4">Actor4:</string>
    <string name="a_o">Año:</string>
    <string name="usuario">Usuario:</string>
    <string name="enviar">Enviar</string>
    <string name="g_nero">Género:</string>
    <string name="descripci_n">Descripción:</string>
    <string name="lope_de_vega">Lope de Vega</string>
    <string name="t_tulo_de_la_pel_cula">título de la película</string>
    <string name="lorem_ipsum_esta_peli_es_muy_chula_me_encanta_cuando_saldra_una_nueva">Lorem Ipsum esta peli es muy chula me encanta cuando saldra una nueva</string>
    <string name="nombre_del_director">nombre del director</string>
    <string name="actor_actriz_principal">actor/actriz principal</string>
    <string name="actor_actriz_secundari">actor/actriz secundari@</string>
    <string name="a_o_de_la_pel_cula">año de la película</string>
    <string name="g_nero_de_la_pel_cula">género de la película</string>
    <string name="descripci_n_de_la_pel_cula_l_mite_500_caracteres">descripción de la película, límite 500 caracteres</string>
    <string name="tu_nombre_de_usuario">tu nombre de usuario</string>
    <string name="el_actor_revelaci_n_de_blade_runner_jared_leto_vendr_a_espanya_de_visita">El actor revelación de Blade Runner, Jared Leto, vendrá a Espanya de visita</string>
    <string name="mensaje_de_foro_respondido">Mensaje de foro respondido</string>
    <string name="hoy_a_las_15_05">Hoy a las 15:05</string>
    <string name="francisco_ha_respondido_a_un_mensaje_tuyo_del_foro_de_la_pel_cula_matrix">Francisco ha respondido a un mensaje tuyo del foro de la pelicula Matrix</string>
    <string name="novedades_de_pel_cula">Novedades de película</string>
    <string name="los_directores_de_la_pel_cula_matrix_han_anunciado_una_secuela_para_el_a_o_que_viene">Los directores de la película Matrix han anunciado una secuela para el año que viene</string>
    <string name="hoy_a_las_13_18">Hoy a las 13:18</string>
    <string name="eventos_que_estabas_esperando">Eventos que estabas esperando</string>
    <string name="_21_de_febrero_a_las_10_18">21 de Febrero a las 10:18</string>
    <string name="el_club_de_fans_de_matrix_ha_convocado_una_quedada_en_la_plaza_catalunya_de_barcelona_para_marzo">El club de fans de Matrix ha convocado una quedada en la Plaza Catalunya de Barcelona para marzo</string>
    <string name="_20_de_febrero_a_las_18_45">20 de Febrero a las 18:45</string>
    <string name="un_amigo_ha_respondido_a_un_mensaje_tuyo_del_foro_de_la_pel_cula_blade_runner">Un amigo ha respondido a un mensaje tuyo del foro de la película Blade Runner</string>
    <string name="popular">Popular</string>
    <string name="description">Descubre los foros con más interacción</string>
    <string name="ciencia_ficcion">Ciencia Ficción</string>
    <string name="descubre">Entra y descubre más películas</string>
    <string name="categorias">Categorías</string>
    <string name="novedades_frase">Últimas películas añadidas</string>
    <string name="comedia">Comedia</string>
    <string name="actores">Descubre más sobre los actores</string>
    <string name="terror">Terror</string>
    <string name="img_popular">img_popular</string>
    <string name="img_new">TODO</string>
    <string name="img_category">img_category</string>
    <string name="drama">Drama</string>
    <string name="descubre_">Descubre</string>
    <string name="title_profile">title_profile</string>
    <string name="username">Raul Velázquez</string>
    <string name="quot_user">Soy aficionado al cine del género de ciencia ficción, me encanta Matriz</string>
    <string name="movie_title">Blade Runner</string>
    <string name="num_comments">159</string>
    <string name="img_list">img_list</string>
    <string name="button_right">button_right</string>
    <string name="img_list3">img_list3</string>
    <string name="img_list4">img_list4</string>
    <string name="img_list2">img_list2</string>
    <string name="comment_post">Lorem ipsum , esta peli es muy chula, me encanta, cuando saldra una nueva?</string>
    <string name="date_post">Hoy a las 15:05</string>
    <string name="username_post">Lope de Vega</string>
    <string name="number_comments">21</string>
    <string name="comment_post2">Lorem ipsum , esta peli es muy chula, me encanta, cuando saldra una nueva?</string>
    <string name="username_post2">Lope de Vega</string>
    <string name="date_post2">Hoy a las 15:05</string>
    <string name="number_comments2">21</string>
    <string name="username_post3">Lope de Vega</string>
    <string name="date_post3">Hoy a las 15:05</string>
    <string name="comment_post3">Lorem ipsum , esta peli es muy chula, me encanta, cuando saldra una nueva?</string>
    <string name="number_comments3">21</string>
    <string name="date_movie">1999</string>
    <string name="director_foro">Hermanas Wachowski</string>
    <string name="title_movie_foro">Matrix</string>
    <string name="icon_info">TODO</string>
    <string name="img_post1">img_post</string>
    <string name="img_1">img_1</string>
    <string name="img_post5">img_post5</string>
    <string name="img_post3">img_post3</string>
    <string name="icon_comment">icon_comment</string>
    <string name="button_info">button_info</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO1</string>
    <string name="le_do">Leído</string>
    <string name="mensaje">Mensaje...</string>
    <string name="icon_sendMessage">icon_sendMessage</string>
    <string name="icon_addfile">icon_addFile</string>
    <string name="icon_reply">icon_reply</string>
    <string name="icon_reply0">icon_reply0</string>
    <string name="icon_comment2">icondfdsf</string>
    <string name="register">Register New Account</string>
    <string name="registerShort">Register</string>
    <string name="user">User</string>
    <string name="nombre">Nombre</string>
    <string name="edad">Edad</string>
    <string name="ciudad">Ciudad</string>
    <string name="interactua">Interactúa</string>
    <string name="descubreForos">Descubre los foros que más gustan</string>
    <string name="novedades">Novedades</string>
    <string name="foro">Foro</string>
    <string name="_13">13</string>
    <string name="lorem_ipsum">Lorem ipsum nosequantorum porquorum latin is antiquorum, i pesque indefinidus il textus est, nus adentrus in peliculus mes plus mes</string>
    <string name="descripcion">Descripción</string>
    <string name="_21">21</string>
    <string name="silvester_stallone">Silvester Stallone</string>
    <string name="quentin_tarantino">Quentin Tarantino</string>
    <string name="angelina_jolie">Angelina Jolie</string>
    <string name="leonardo_dicaprio">Leonardo Dicaprio</string>
    <string name="brad_pitt">Brad Pitt</string>
    <string name="actors">Actores:</string>
    <string name="anyo">Año</string>
    <string name="titulo_de_la_pelicula">Título de la Película</string>
    <string name="_2012">2012</string>
    <string name="genero">Género</string>
    <string name="categor_a">Categoría</string>
    <string name="_123_pel_culas">123 películas</string>
    <string name="insertar_nueva_pelicula">Insertar Nueva Pelicula</string>
    <string name="repita_pass">Repita la contraseña</string>
    <string name="escriba_pass">Escriba una contraseña</string>
    <string name="guardar">Guardar</string>
    <string name="forocomments">foroComments</string>
    <string name="director2">Director</string>
    <string name="actores2">Actores</string>
    <string name="estrellas">estrellas</string>
    <string name="imagen">imagen</string>
    <string name="fecha">fecha</string>
    <string name="comentario">comentario</string>
    <string name="boton">boton</string>
    <string name="responde_a_este_comentario">Responde a este comentario</string>
    <string name="texto">Texto:</string>
    <!--<string name="foro">Foro</string>-->
    <string name="nuevo_mensaje_de">Nuevo mensaje de </string>
    <string name="textview">TextView</string>
    <string name="categoria">Categoría</string>
    <string name="formulario">Formulario</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="peliculat">Película</string>
    <string name="ourmovie">OURMOVIE</string>
    <string name="perfil">Perfil</string>
    <string name="nuevo_usuario">Nuevo usuario</string>
    <string name="configuraci_n">Configuración</string>
    <string name="cambiar_contrase_a">Cambiar Contraseña</string>
    <string name="redactar_perfil">Redactar Perfil</string>
    <string name="qu_te_cuentas">¿Qué te cuentas?</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="condiciones">Condiciones</string>
    <string name="iconright">iconRight</string>
    <string name="acci_n">Acción</string>
    <string name="e_mail">E-mail</string>
    <string name="ciudad_">Ciudad</string>
    <string name="edad_">Edad</string>
    <string name="guardar_">Guardar</string>
    <string name="usuario_">Usuario</string>
    <string name="cuenta_sobre_ti">Cuenta sobre ti...</string>
    <string name="favouritemovies">favouriteMovies</string>
    <item name="visible" type="id"/>
    <item name="masked" type="id"/>

    <string-array name="generos">
        <item>Elige una opción del desplegable</item>
        <item>Acción</item>
        <item>Ciencia Ficción</item>
        <item>Comedia</item>
        <item>Drama</item>
        <item>Terror</item>
    </string-array>

</resources>
