<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:design="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imagen"
        android:layout_width="50dp"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:contentDescription="@string/img_list2"
        android:scaleType="fitXY" />

    <LinearLayout
        android:id="@+id/layout_descriptionList1"
        android:layout_width="220dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="start"
        android:orientation="vertical"
        android:paddingStart="6dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="10dp"
            android:paddingTop="2dp"
            android:text="@string/movie_title"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/layout_icons1"
            android:layout_width="90dp"
            android:layout_height="20dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/icon_comments1"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/forocomments"
                design:srcCompat="@android:drawable/sym_action_chat" />

            <TextView
                android:id="@+id/numComments"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/num_comments"
                android:paddingTop="6dp"
                android:text="@string/num_comments" />

        </LinearLayout>


    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="10dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        design:srcCompat="@drawable/ic_right48" />

</LinearLayout>

