<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:design="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#cce3f5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kseniyaturava.mytest.MainActivity"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:layout_weight="1"
        android:scrollbars="vertical"
        android:scrollbarStyle="insideInset">

        <LinearLayout
            android:id="@+id/layout_content_vert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tituloForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/amiko"
                android:text="@string/registro_de_nueva_pel_cula"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:paddingTop="3dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:fontFamily="@font/amiko"
                android:textColor="#000"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/titulo" />

            <EditText
                android:id="@+id/etTitulo"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="0dp"
                android:layout_marginStart="6dp"
                android:fontFamily="@font/amiko"
                android:hint="@string/t_tulo_de_la_pel_cula"
                android:inputType="text"
                android:labelFor="@+id/tvTitulo"
                android:maxLength="30"
                android:background="@drawable/et_border"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvAño"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:paddingTop="3dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:fontFamily="@font/amiko"
                android:textColor="#000"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/a_o" />

            <EditText
                android:id="@+id/etAño"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="0dp"
                android:layout_marginStart="6dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="@drawable/et_border"
                android:hint="@string/a_o_de_la_pel_cula"
                android:fontFamily="@font/amiko"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="16sp"
                android:maxLength="4"
                android:inputType="number"
                android:labelFor="@+id/tvAño" />

            <TextView
                android:id="@+id/tvGenero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:paddingTop="3dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:fontFamily="@font/amiko"
                android:textColor="#000"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/g_nero" />

            <EditText
                android:id="@+id/etGenero"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="0dp"
                android:layout_marginStart="6dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="@drawable/et_border"
                android:hint="@string/g_nero_de_la_pel_cula"
                android:inputType="text"
                android:fontFamily="@font/amiko"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="16sp"
                android:maxLength="10"
                android:labelFor="@+id/tvGenero" />

            <TextView
                android:id="@+id/tvDirector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:paddingTop="3dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:fontFamily="@font/amiko"
                android:textColor="#000"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/director" />

            <EditText
                android:id="@+id/etDirector"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="0dp"
                android:layout_marginStart="6dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="@drawable/et_border"
                android:hint="@string/nombre_del_director"
                android:inputType="textPersonName"
                android:fontFamily="@font/amiko"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="16sp"
                android:maxLength="30"
                android:labelFor="@+id/tvDirector" />

            <TextView
                android:id="@+id/tvActor1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:paddingTop="3dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:fontFamily="@font/amiko"
                android:textColor="#000"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/actor1" />

            <EditText
                android:id="@+id/etActor1"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="0dp"
                android:layout_marginStart="6dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="@drawable/et_border"
                android:hint="@string/actor_actriz_principal"
                android:inputType="textPersonName"
                android:fontFamily="@font/amiko"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="16sp"
                android:maxLength="30"
                android:labelFor="@+id/tvActor1" />

            <TextView
                android:id="@+id/tvActor2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:paddingTop="3dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:fontFamily="@font/amiko"
                android:textColor="#000"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/actor2" />

            <EditText
                android:id="@+id/etActor2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="0dp"
                android:layout_marginStart="6dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="@drawable/et_border"
                android:hint="@string/actor_actriz_principal"
                android:inputType="textPersonName"
                android:fontFamily="@font/amiko"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="16sp"
                android:maxLength="30"
                android:labelFor="@+id/tvActor2" />

            <TextView
                android:id="@+id/tvActor3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:paddingTop="3dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:fontFamily="@font/amiko"
                android:textColor="#000"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/actor3" />

            <EditText
                android:id="@+id/etActor3"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="0dp"
                android:layout_marginStart="6dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="@drawable/et_border"
                android:hint="@string/actor_actriz_secundari"
                android:inputType="textPersonName"
                android:fontFamily="@font/amiko"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="16sp"
                android:maxLength="30"
                android:labelFor="@+id/tvActor3" />

            <TextView
                android:id="@+id/tvActor4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:paddingTop="3dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:fontFamily="@font/amiko"
                android:textColor="#000"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/actor4" />

            <EditText
                android:id="@+id/etActor4"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="0dp"
                android:layout_marginStart="6dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="@drawable/et_border"
                android:hint="@string/actor_actriz_secundari"
                android:inputType="textPersonName"
                android:fontFamily="@font/amiko"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="16sp"
                android:maxLength="30"
                android:labelFor="@+id/tvActor4" />

            <TextView
                android:id="@+id/tvDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:paddingTop="3dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:fontFamily="@font/amiko"
                android:textColor="#000"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/descripci_n" />

            <EditText
                android:id="@+id/etDescripcion"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="0dp"
                android:layout_marginStart="6dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="@drawable/et_border"
                android:hint="@string/descripci_n_de_la_pel_cula_l_mite_200_caracteres"
                android:fontFamily="@font/amiko"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="16sp"
                android:inputType="textMultiLine"
                android:maxLength="200"
                android:labelFor="@+id/tvDescripcion" />

            <Button
                android:id="@+id/sendForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:layout_marginStart="6dp"
                android:background="@android:color/holo_red_light"
                android:text="@string/enviar" />

        </LinearLayout>

    </ScrollView>

    <FrameLayout
        android:id="@+id/menu_container"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_above="@+id/bottomNavigationView"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:background="@color/colorBlanco"
        android:clipToPadding="false"
        android:isScrollContainer="false">

        <!--shadow.xml inside-->
        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_gravity="top"
            android:background="@drawable/shadow" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.BottomNavigationView
                android:id="@+id/bottomNavigationView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                app:menu="@menu/menu_navigation" />

        </LinearLayout>

    </FrameLayout>

</LinearLayout>

